<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/blue06" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/league_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:contentDescription="@string/league"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League" />

        <TextView
            android:id="@+id/matchday_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/matchday"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/test_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/League" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/frame"
        android:layout_marginTop="20dp"
        android:padding="5dp">

        <Button
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:gravity="center"
            android:contentDescription="@string/share"
            android:paddingLeft="120dp"
            android:paddingRight="120dp"
            android:text="@string/share_text" />
    </FrameLayout>

</LinearLayout>