<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item"
    android:elevation="4dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_crest"
                android:layout_width="40dp"
                android:contentDescription="@string/home_team"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/manchester_city" />

            <TextView
                android:id="@+id/home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/home_team"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="#000"
                android:textSize="@dimen/TeamNames" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/score"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="@color/blue01"
                android:textSize="@dimen/Score" />

            <TextView
                android:id="@+id/data_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/date"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingTop="7dp"
                android:text="@string/test_text"
                android:textColor="#3f3f3f" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/away_crest"
                android:layout_width="40dp"
                android:contentDescription="@string/away_team"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/manchester_city" />

            <TextView
                android:id="@+id/away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/away_team"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/test_text"
                android:textColor="#000"
                android:textSize="@dimen/TeamNames" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/details_fragment_container"
        android:layout_width="match_parent"
        android:contentDescription="@string/frame"
        android:layout_height="wrap_content">

    </FrameLayout>

</LinearLayout>


